the first test passed

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
-
+cypress/fixtures
+cypress/plugins
+cypress/support
+cypress/integration/1-getting-started
+cypress/integration/2-advanced-examples
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
