removing vite and using liveserver instead

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "vite": "^2.9.2"
+    "tailwindcss": "^3.0.24"
   },
   "dependencies": {
     "cypress": "^9.6.1"
