--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ cypress/plugins
 cypress/support
 cypress/integration/1-getting-started
 cypress/integration/2-advanced-examples
+cypress/downloads/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
